fix testimonial quote alignment

--- a/src/components/testimonials/index.module.scss
+++ b/src/components/testimonials/index.module.scss
@@ -34,6 +34,7 @@
   }
 
   .quote {
+    margin: 0 auto;
     width: 80%;
   }
 }
